# rust-ipcrypt2

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
ipcrypt2-rust/: Cargo.toml  README.md  build.rs
ipcrypt2-rust/benches/: bench.rs
ipcrypt2-rust/src/: lib.rs
ipcrypt2-rust/src/ipcrypt2/: build.zig  build.zig.zon
ipcrypt2-rust/src/ipcrypt2/src/: ipcrypt2.c
pure-rust/: Cargo.toml  README.md
pure-rust/.github/workflows/: ci.yml
pure-rust/src/: aes.rs  common.rs  deterministic.rs  lib.rs  nd.rs  ndx.rs  pfx.rs
src/: lib.rs
src/ipcrypt2/: build.zig  ipcrypt2.c
src/ipcrypt2/src/: ipcrypt2.c
src/ipcrypt2/src/include/: ipcrypt2.h
