[package]
name = "ipcrypt2"
version = "0.2.0"
edition = "2021"
license = "ISC"
authors = ["Frank Denis <github@pureftpd.org>"]
homepage = "https://github.com/jedisct1/rust-ipcrypt2"
repository = "https://github.com/jedisct1/rust-ipcrypt2"
documentation = "https://docs.rs/ipcrypt2"
categories = ["cryptography", "wasm", "security", "no-std"]
keywords = ["crypto", "ip", "address", "obfuscation", "privacy", "encryption", "aes"]
description = """
A Rust library for format-preserving encryption of IP addresses.
Supports both deterministic and non-deterministic encryption modes.
"""
readme = "README.md"

[dependencies]
[target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(not(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown")))'.dependencies]
getrandom = { version = "0.3" }

[build-dependencies]
cc = "1.2"

[profile.release]
codegen-units = 1
incremental = false
panic = "abort"
