[package]
name = "ipcrypt2"
version = "0.9.1"
edition = "2021"
license = "ISC"
authors = ["Frank Denis <github@pureftpd.org>"]
homepage = "https://github.com/jedisct1/rust-ipcrypt2"
repository = "https://github.com/jedisct1/rust-ipcrypt2"
documentation = "https://docs.rs/ipcrypt2"
categories = ["cryptography", "wasm", "security"]
keywords = ["crypto", "ip", "address", "obfuscation", "encryption"]
description = """
A Rust library for format-preserving encryption of IP addresses.
Supports both deterministic and non-deterministic encryption modes.
"""
readme = "README.md"

[dependencies]
rand = "0.10"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "bench"
harness = false

[profile.release]
codegen-units = 1
incremental = false
panic = "abort"
