[package]
name = "ipcrypt-rs"
version = "0.9.4"
edition = "2021"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "IP address encryption and obfuscation methods in pure Rust"
repository = "https://github.com/jedisct1/rust-ipcrypt2"
documentation = "https://docs.rs/ipcrypt-rs"
readme = "README.md"
license = "ISC"
keywords = ["encryption", "privacy", "ip", "ipcrypt", "security"]
categories = ["cryptography", "network-programming"]

[features]
default = ["random"]
random = ["dep:rand", "dep:getrandom"]

[dependencies]
aes = { version = "0.8", features = ["hazmat"] }
rand = { version = "0.10", optional = true }
getrandom = { version = "0.4", features = ["wasm_js"], optional = true }

[dev-dependencies]
ct-codecs = "1.1"

